# RoseGardenPlantCareSystem

./: CMakeLists.txt  README.md  RoseGardenPlantCareSystem.db  addgardener.cpp  addgardener.h  addgardener.ui  addgardentool.cpp  addgardentool.h  addgardentool.ui  addgardentool.ui.autosave  addplant.cpp  addplant.h  addplant.ui  addplant.ui.autosave  addsystemadmin.cpp  addsystemadmin.h  addsystemadmin.ui  adduser.cpp  adduser.h  adduser.ui  admin.cpp  admin.h  admin.ui  adminlogin.cpp  adminlogin.h  adminlogin.ui  adminpanel.cpp  adminpanel.h  adminpanel.ui  availableplants.cpp  availableplants.h  availableplants.ui  databaseheader.h  gardenerdetails.cpp  gardenerdetails.h  gardenerdetails.ui  gardenerdetails.ui.autosave  index.cpp  index.h  index.ui  (+35 more)
Files/: igmArray.txt
RGS_PHOTOS/: Letter to Bauleni Central Congregation_24-10-2024.docx
databases/: RoseGardenPlantCareSystem.db  RoseGardenPlantCareSystem.db-journal  RoseGardenPlantCareSystem.sqbpro
